Fix issue with dropdown not showing in table

--- a/syntactic-front-end-redux/src/scss/theme/custom-components/_datatable.scss
+++ b/syntactic-front-end-redux/src/scss/theme/custom-components/_datatable.scss
@@ -20,6 +20,10 @@
         right: 20px;
     }
 
+    .cGezUg div:first-child {
+        overflow: visible !important;
+    }
+
     .dGqwdB {
         border-top-color: $card-border-color;
     }
